# Treatwell

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: on-pull-request.yaml  on-push.yaml
scripts/: build-and-push.sh
src/: Dockerfile  country_extraction.py  data_extract.py  test_country_extraction.py  test_data_extract.py
terraform/: .tool-versions  backend.tf  main.tf  terraform.tf  variables.tf
